--- a/package.json
+++ b/package.json
@@ -4,19 +4,27 @@
   "description": "Logger Library",
   "main": "dist/logger.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "lint": "npx eslint . --fix"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/strenkml/stumper.git"
   },
   "author": "Matt Strenk",
-  "license": "ISC",
+  "license": "GPLV3",
   "bugs": {
     "url": "https://github.com/strenkml/stumper/issues"
   },
   "homepage": "https://github.com/strenkml/stumper#readme",
   "devDependencies": {
-    "typescript": "^5.1.3"
+    "@types/node": "~20.2.5",
+    "@typescript-eslint/eslint-plugin": "~5.59.8",
+    "@typescript-eslint/parser": "~5.59.8",
+    "eslint": "~8.42.0",
+    "eslint-config-prettier": "~8.8.0",
+    "eslint-plugin-prettier": "~4.2.1",
+    "prettier": "~2.8.8",
+    "typescript": "~5.0.0"
   }
 }
