--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "stumper",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Logger Library",
-  "main": "dist/Stumper.js",
-  "types": "dist/Stumper.d.ts",
+  "main": "lib/Stumper.js",
+  "types": "lib/Stumper.d.ts",
   "scripts": {
     "build": "tsc",
     "lint": "npx eslint . --fix"
@@ -28,6 +28,10 @@
     "prettier": "~2.8.8",
     "typescript": "~5.0.0"
   },
-  "files": ["lib/**/*"],
-  "keywords": ["Logger"]
+  "files": [
+    "lib/**/*"
+  ],
+  "keywords": [
+    "Logger"
+  ]
 }
