--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,7 @@
     "no-empty-function": "off",
     "linebreak-style": [
       "error",
-      "windows"
+      "unix"
     ],
     "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/no-unused-vars": "warn",
