Fix types and common js file name

--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "stumper",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Logger Library",
-  "main": "dist/index.cjs",
+  "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.js",
       "import": "./dist/index.mjs"
     }
   },
   "scripts": {
     "build": "tsup",
-    "build:clean": "rm -rf dist && pnpm build",
-    "lint": "pnpm exec eslint .",
-    "lint:fix": "pnpm exec eslint . --fix",
-    "format": "pnpm exec prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
-    "prepublishOnly": "pnpm run build:clean",
-    "update": "pnpm exec npm-check -u",
-    "depcheck": "pnpm exec npm-check"
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
+    "prepublishOnly": "pnpm run build",
+    "update": "npm-check -u",
+    "depcheck": "npm-check"
   },
   "repository": {
     "type": "git",
